--- a/_layouts/faq.html
+++ b/_layouts/faq.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% include faq-breadcrumbs.html %}
 <!--       Article Header
         ==================================================        -->
 
