--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,13 +1,21 @@
 <!-- Footer
 ================================================== -->
-<div class="footer">
-    <p style="verticle-align:middle">© 2014 Illumina, Inc. All rights reserved.</p>
+<div class="custom-footer">
+  <div class="container">
+    <ul class="footer-holder">
+     <li class="footer-list">Help</li>
+     <li class="footer-list">FAQ</li>
+     <li class="footer-list">Developer</li>
+     <li class="footer-list">Terms</li>
+     <li class="footer-list">Blog</li>
+    </ul>
+  </div>
 </div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/js/jquery.js"></script>
 <script src="{{ site.baseurl }}/js/bootstrap.js"></script>
-<script src="{{ site.baseurl }}/js/docs.min.js"></script>
-<!-- ******************************************************                    Body EMD                ************************************************* -->
+<script src="{{ site.baseurl }}/js/video.js"></script>
+<script src="{{ site.baseurl }}/js/accordion.js"></script>
+<script src="{{ site.baseurl }}/js/articlepage.js"></script>
+<script src="{{ site.baseurl }}/js/gettingstarted.js"></script>
