--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -1,12 +1,15 @@
-/* Header CSS */
+/* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
+
+                                           BASESPACE GREY HEADER WITH BASEPSACE AND ILLUMINA LOGO
+
+            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 .header { 
 
-  min-height: 50px;
+  min-height: 65px;
   border: 1px solid transparent;
-  background-color: #ffffff;
-  font-family: @font-header;
+  background-color: #666666;
 }
 
 
@@ -15,34 +18,64 @@
 .header-brand-baseSpace {
   float: left;
   height: 50px;
-  padding: 15px 15px;
-  font-size: 22px;
   line-height: 20px;
+  padding-top: 15px;
+  font: 200 22px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
   color: #ffffff;
 }
 
 .header-brand-illumina {
   float: right;
   height: 50px;
-  padding: 15px 15px;
-  font-size: 22px;
   line-height: 20px;
+  padding-top: 15px;
+  font: 200 22px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
   color: #ffffff;
 }
 
+.container-fluid-header {               /* Custom container fluid without padding */
+
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.image-header{
+    
+    width: 100%;
+    height: 65px;
+    
+}
 
 
-// @@@@@@@@@@@ FOOTER     @@@@@@@@@@@
+/* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
-.footer {                   /* Footer CSS */
+                                           BASESPACE FOOTER
+
+            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+
+.custom-footer {                   /* Footer CSS */
  
-  font:10px/1.2em "pt-sans-regular",sans-serif;
-  color: #666666;
-  margin: 15px auto;
-  background-color: #ffffff;
-  position: relative;
-  left: 50px;
+  font:200 14px/1.2em "pt-sans-regular",sans-serif;
+  background-color: #666666;
+  color: #ffffff;
+  height: 50px;
+
     
+}
+
+.footer-holder {
     
+    text-align: right;
+    margin-bottom: 0px;
+    
+}
+
+.footer-list {
+    
+ display: inline-block;
+ line-height: 50px;
+ padding-left: 20px;
+ padding-right: 20px;
+ 
     
 }
