--- a/_less/landingpage.less
+++ b/_less/landingpage.less
@@ -9,25 +9,40 @@
 }
 
 
-.landingpage_title{
+.landingpage-title{
     
-  margin-top: 15px;
+  margin-top: 30px;
   margin-bottom: 15px;
   font: 200 28px/1.2em @font-header, sans-serif;
   color: @article-color;
   letter-spacing: 1px;
+  position: relative;
+  left: 15px;
     
     
 }
 
-.line{
+
+
+.landingpage-p{
     
-      border: solid;
-      border-color: @footer-color;
-      border-width: 1px;
+  position: relative;
+  left: 15px;
     
 }
 
+
+.landingpage-line{
+    
+margin-top: 30px;
+margin-bottom: 0px;
+display: block;
+border: 0;
+border-top: 1px solid #dfdfdf;
+border-bottom: 1px solid #fff;
+    
+    
+}
 
 .leftsection-heading{
     
@@ -46,5 +61,65 @@
     
 }
 
+.line{
+    
+      border: solid;
+      border-color: #e5e5e5;
+      border-width: 1px;
+
+    
+}
+
+
+
 /*   ==========================================================================================================     */
 
+
+.block-sidebar-forums{
+    
+      border: solid;
+      border-color: #7FC241;
+      border-width: 3px;
+    
+      padding: 30px;
+      margin-top: 40px;
+
+}
+
+
+.block-sidebar-git{
+    
+      border: solid;
+      border-color: #666666;
+      border-width: 3px;
+    
+      padding: 30px;
+      margin-top: 60px;
+
+}
+
+
+.sidebar-heading{
+    
+     font: 800 18px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+     color: #666666;
+
+}
+
+.sidebar-content{
+    
+    
+    font: 200 14px/1.2em "pt-sans-regular",sans-serif;
+    margin-top: 20px;
+}
+
+
+/*  *****************************  */
+
+
+.temp-img{
+ 
+    position: relative;
+    left: 0px;
+    
+}
