--- a/css/style.less
+++ b/css/style.less
@@ -4,7 +4,7 @@
 @import url("font.less");
 @import url("headerfooter.less");
 @import url("typography.less");
-@import url("banner.less");
+@import url("breadcrumb.less");
 @import url("article.less");
 @import url("callout.less");
 @import url("articlefooter.less");
@@ -12,3 +12,7 @@
 @import url("accordioncustom.less");
 @import url("landingpage.less");
 @import url("homepage.less");
+@import url("gettingStarted.less");
+@import url("purplebanner.less");
+@import url("lowerbannerhome.less");
+@import url("carousel.less");
