--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-	<body class="styling">
-		 <!--      Top Navigation with BaseSpace & Illumina Logo
-			==================================================        -->
+<body class="styling">
+	<!--      Top Navigation with BaseSpace & Illumina Logo
+		==================================================        -->
 
-  <div class="header"> <!-- custom css -->
-    <div class="container">
-            <a class="header-brand-baseSpace" href="{{ site.baseurl }}/">BaseSpace HelpCenter</span></a> <!-- custom css -->
-            <a class="header-brand-illumina" href="http://illumina.com/">illumina</span></a> <!-- custom css -->
-     </div>
-  </div>
-
-		<div>
-		{{ content }}
+	<div class="header"> <!-- custom css -->
+		<div class="row">
+				<div class="col-lg-12">
+						<img class="image-header" src="{{ site.baseurl }}/images/basespaceheader.jpg">
+				</div>
 		</div>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row">
+				<div class="banner-custom">
+						<div class="container">
+							<div class="col-sm-6">
+								<h1 class="banner-text">HelpCenter</h1>
+								<p class="banner-p">Browse through our articles, forums, video and blog posts</p>
+							</div>
+							<div class="col-sm-6">
+									<div class="get-started">
+										<p class="gs-head">everything you need to quickly get going</p>
+										<a href="gettingStarted.html" class="button-secondary">Get Started <i class="glyphicon glyphicon-circle-arrow-right"></i></a>
+									</div>
+							</div>
+						</div>
+					</div>
+		</div>
+	</div>
+
+	<br>
+	<br>
+
+	<div>
+	{{ content }}
+	</div>
 
 		{% include foot.html %}
 	</body>
