add getting started page

--- a/_includes/article-sidebar.html
+++ b/_includes/article-sidebar.html
@@ -56,7 +56,7 @@
           <div class="row">
           <span class="related_section_heading_video col-sm-9">Related Video</span>
           </div>
-                <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ"><img src="images/basespace_video.png" class="img-responsive">
+                <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ"><img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive">
                 <br>
                 <p>Introduction to BaseSpace</p>
                 </a>
