--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -13,7 +13,7 @@ layout: default
       <div class="col-sm-8">
            <!--       Article Body
           ==================================================        -->
-          <div>
+          <div id="article-content">
   		{{ content }}
           </div><!-- /article body ends -->
       </div><!-- /column ends -->
