--- a/_less/purplebanner.less
+++ b/_less/purplebanner.less
@@ -7,9 +7,12 @@
 
 
 /* Purple Banner with link to image */
+.banner-container {
+  margin-bottom: 20px;
+}
 
 .banner-custom{
-    
+
 text-align: left;
 height: 250px;
 background-image: url(http://res.illumina.com/images/rgh/hero/childpageheader-prpl240-v2.jpg);
@@ -18,9 +21,9 @@ background-image: url(http://res.illumina.com/images/rgh/hero/childpageheader-pr
 }
 
 .banner-img{
-    
 
-    
+
+
 }
 
 
@@ -50,16 +53,16 @@ letter-spacing: 1px;
         font: 200 26px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
         }
     }
-  
+
 
 .banner-p{
-    
+
     color: #ffffff;
-    font: 200 14px/1.2em "pt-sans-regular",sans-serif;  
-    
+    font: 200 14px/1.2em "pt-sans-regular",sans-serif;
+
     position: relative;
     top: 35px;
-    
+
 }
 
 
@@ -67,7 +70,7 @@ letter-spacing: 1px;
 
 
 .get-started{
-    
+
     position: relative;
     top: 70px;
     border-left: 1px solid;
@@ -76,17 +79,17 @@ letter-spacing: 1px;
     padding-top: 40px;
     padding-bottom: 80px;
 
-    
-    
+
+
 }
 
 .gs-head{
-    
- font: 200 20px/1.2em "pt-sans-regular",sans-serif;   
+
+ font: 200 20px/1.2em "pt-sans-regular",sans-serif;
  position: absolute;
  top: 20px;
  color: #F9F9F9;
-    
+
 }
 
 
@@ -97,42 +100,42 @@ letter-spacing: 1px;
 
 .button-secondary{
 
-    
+
 position: absolute;
 top: 50px;
- 
-border: 1px solid transparent;    
+
+border: 1px solid transparent;
 border-color: #bbb;
 border-radius: 5px;
-    
-    
+
+
 background: #fff;
 color: #666;
 padding: 10px 25px;
 -webkit-box-shadow: #bbbbbb 0 2px 0 0;
 -moz-box-shadow: #bbbbbb 0 2px 0 0;
 box-shadow: #bbbbbb 0 2px 0 0;
-    
+
 
 display: inline-block;
-font: 200 15px/1.2em "pt-sans-regular",sans-serif;   
+font: 200 15px/1.2em "pt-sans-regular",sans-serif;
 font-weight: bold;
-    
-    
-    
+
+
+
 }
 
 .button-secondary:hover{
-    
+
 
     background-color: #e5e5e5;
     text-decoration: none;
-    
+
 }
 
 
 .button-primary{
-    
+
 background: #7ca8d4;
 color: #fff;
 padding: 6px 20px;
@@ -161,26 +164,26 @@ transition-duration: 0.5s;
 -moz-transition-timing-function: ease;
 -o-transition-timing-function: ease;
 transition-timing-function: ease;
-    
-    
-    
-    
+
+
+
+
 }
 
 .button-primary:hover{
-    
+
     color: #fff;
-    
+
 }
 
 .fa{
-    
+
  display: inline-block;
 font-family: FontAwesome;
 font-style: normal;
 font-weight: normal;
 line-height: 1;
 -webkit-font-smoothing: antialiased;
-    
-    
+
+
 }
