--- a/_includes/article-breadcrumbs.html
+++ b/_includes/article-breadcrumbs.html
@@ -7,10 +7,16 @@
 				</span>
 				<span class="bs-nav-back-text">Articles</span>
 			</a>
+			{% else %}
+			<a class="btn illumina-gray bs-nav-back" href="{{ site.baseurl }}/">
+				<span class="illumicons caret-left medium">
+				</span>
+				<span class="bs-nav-back-text">Help Center</span>
+			</a>
+			{% endif %}
 			<h3 class="bs-nav-title">
 				<span class="bs-nav-title-text">{{ page.title }}</span>
 			</h3>
-			{% endif %}
 		</div>
 	</div>
 </div>
