--- a/_includes/edit.html
+++ b/_includes/edit.html
@@ -41,8 +41,4 @@
 
 <br>
 
-<div class="row">
-  <div class="col-sm-10 col-sm-offset-1">
-      <img src="{{ site.baseurl }}/images/discourse2.png" height="400px" width="800px" class="temp-img">
-  </div>
-</div>
+{% include discourse.html %}
