--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+hide_welcome_banner: true
 ---
   <!--      Banner with Breadcrumbs and Search Box
         ==================================================        -->
