--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,18 @@
 	<!--      Top Navigation with BaseSpace & Illumina Logo
 		==================================================        -->
 
-	<div class="header"> <!-- custom css -->
+<!-- <div class="header">
 		<div class="row">
 				<div class="col-lg-12">
 						<img class="image-header" src="{{ site.baseurl }}/images/basespaceheader.jpg">
 				</div>
+		</div>
+	</div> -->
+
+	<div class="header"> <!-- custom css -->
+		<div class="container">
+						<a class="header-brand-baseSpace" href="{{ site.baseurl }}/">BaseSpace HelpCenter</span></a> <!-- custom css -->
+						<a class="header-brand-illumina" href="http://www.illumina.com/">illumina</span></a> <!-- custom css -->
 		</div>
 	</div>
 
