--- a/_less/carousel.less
+++ b/_less/carousel.less
@@ -1,80 +1,79 @@
 .item{
-    background: #f6f6f6;    
+    background: #f6f6f6;
     text-align: center;
     height: 250px !important;
 
 }
 
 .carousel-holder{
-    
-padding: 10px;    
-    
-    
+
+padding: 10px;
+
+
 }
 
 .carousel-title{
-    
+
 font: 200 28px/1.2em "pt-sans-regular",sans-serif;
 color: #666;
-text-align: left;  
-    
+text-align: left;
+
 }
 
 .carousel-text{
-    
-text-align: left;    
-    
+
+text-align: left;
+
 }
 
 
 /*         *********************************************************      */
 
 .carousel-img-one{
-    
+
  height: 100%;
  width: 90%;
  position: relative;
  top: 10px;
-    
+
 }
 
 .carousel-img-two{
-    
+
  height: 100%;
  width: 100%;
  position: relative;
  top: 5px;
  left: 10px
-    
+
 }
 
 .carousel-img-three{
-    
+
  height: 70%;
  width: 70%;
  position: relative;
  top: -10px;
-    
+
 }
 
 
 /*         *********************************************************      */
 
 .carousel-line{
- 
-margin: 50px 0;
+margin: -15px 0 15px 0;
 display: block;
 border: 0;
 border-top: 1px solid #dfdfdf;
 border-bottom: 1px solid #fff;
-    
+
 }
 
 .carousel-date{
-    
+
  text-align: left;
  color: #AD73AC;
-    
+
 }
 
 .carousel{
@@ -151,18 +150,18 @@ border-bottom: 1px solid #fff;
 }
 
 .carousel-heading{
- 
+
 font: 200 28px/1.2em "HelveticaNeueW01-LtExt", sans-serif;
 color: #ffb441;
 letter-spacing: 1px;
 margin-top: 50px;
 margin-bottom: 30px;
-    
+
 }
 
 .carousel-body{
-    
+
  position: relative;
  top: -15px;
-    
+
 }
