--- a/_less/carousel.less
+++ b/_less/carousel.less
@@ -61,7 +61,8 @@ text-align: left;
 /*         *********************************************************      */
 
 .carousel-line{
-margin: -15px 0 15px 0;
+
+margin: 50px 0;
 display: block;
 border: 0;
 border-top: 1px solid #dfdfdf;
