--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,17 +8,17 @@
 <!-- <div class="header">
 		<div class="row">
 				<div class="col-lg-12">
-						<img class="image-header" src="{{ site.baseurl }}/images/basespaceheader.jpg">
+						<img class="image-header" width="1170px" src="{{ site.baseurl }}/images/BaseSpace_new_header.jpeg">
 				</div>
 		</div>
 	</div> -->
 
-	<div class="header"> <!-- custom css -->
-		<div class="container">
-						<a class="header-brand-baseSpace" href="{{ site.baseurl }}/">BaseSpace HelpCenter</span></a> <!-- custom css -->
-						<a class="header-brand-illumina" href="http://www.illumina.com/">illumina</span></a> <!-- custom css -->
-		</div>
-	</div>
+	  <div class="header">
+    <div class="container">
+            <a class="header-brand-baseSpace" href="{{ site.baseurl }}/">BaseSpace HelpCenter</span></a> <!-- custom css -->
+            <a class="header-brand-illumina" href="http://www.illumina.com/">illumina</span></a> <!-- custom css -->
+    </div>
+  </div>
 
 {% if page.hide_welcome_banner == null || page.hide_welcome_banner == false %}
 	<div class="container-fluid banner-container">
