--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -5,11 +5,11 @@
             %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
-.header { 
+.header {
 
   min-height: 65px;
   border: 1px solid transparent;
-  background-color: #666666;
+  background-color: #fff;
 }
 
 
@@ -21,7 +21,7 @@
   line-height: 20px;
   padding-top: 15px;
   font: 200 22px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-  color: #ffffff;
+  color: #666666;
 }
 
 .header-brand-illumina {
@@ -30,7 +30,7 @@
   line-height: 20px;
   padding-top: 15px;
   font: 200 22px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-  color: #ffffff;
+  color: #666666;
 }
 
 .container-fluid-header {               /* Custom container fluid without padding */
@@ -40,10 +40,10 @@
 }
 
 .image-header{
-    
+
     width: 100%;
     height: 65px;
-    
+
 }
 
 
@@ -54,28 +54,28 @@
             %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 .custom-footer {                   /* Footer CSS */
- 
+
   font:200 14px/1.2em "pt-sans-regular",sans-serif;
   background-color: #666666;
   color: #ffffff;
   height: 50px;
 
-    
+
 }
 
 .footer-holder {
-    
+
     text-align: right;
     margin-bottom: 0px;
-    
+
 }
 
 .footer-list {
-    
+
  display: inline-block;
  line-height: 50px;
  padding-left: 20px;
  padding-right: 20px;
- 
-    
+
+
 }
