Added CSS toggle icons
- Made changes in CSS for toggle icons to work.
- Deleted the accordion.js file.
- Some changes in HTML

--- a/_less/accordioncustom.less
+++ b/_less/accordioncustom.less
@@ -20,7 +20,14 @@
 
             %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
+  /*toggle-icons*/
 
+   .accordion-toggle.collapsed span:before { 
+        content:"\2b";
+   }
+   .accordion-toggle span:before { 
+        content:"\2212";
+   }
 
   .accordion-new {
     padding-top: 20px;
@@ -83,7 +90,6 @@
   }
 
   .accordion-link:hover{
-
       text-decoration: underline;
   }
 
