--- a/_less/landingpage.less
+++ b/_less/landingpage.less
@@ -18,30 +18,24 @@
   letter-spacing: 1px;
   position: relative;
   left: 15px;
-    
-    
 }
-
 
 
 .landingpage-p{
     
   position: relative;
   left: 15px;
-    
 }
 
 
 .landingpage-line{
     
-margin-top: 30px;
-margin-bottom: 0px;
-display: block;
-border: 0;
-border-top: 1px solid #dfdfdf;
-border-bottom: 1px solid #fff;
-    
-    
+  margin-top: 30px;
+  margin-bottom: 0px;
+  display: block;
+  border: 0;
+  border-top: 1px solid #dfdfdf;
+  border-bottom: 1px solid #fff;
 }
 
 .leftsection-heading{
@@ -75,44 +69,30 @@ border-bottom: 1px solid #fff;
 /*   ==========================================================================================================     */
 
 
-.block-sidebar-forums{
+.block-sidebar{
     
-      border: solid;
-      border-color: #7FC241;
-      border-width: 3px;
-    
-      padding: 30px;
-      margin-top: 40px;
-
-}
-
-
-.block-sidebar-git{
-    
-      border: solid;
-      border-color: #666666;
-      border-width: 3px;
-    
-      padding: 30px;
-      margin-top: 60px;
-
+      padding-top: 10px;
+      padding-left: 20px;
+      margin: 0;
 }
 
 
 .sidebar-heading{
     
-     font: 800 18px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+     font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
      color: #666666;
-
 }
 
 .sidebar-content{
-    
     
     font: 200 14px/1.2em "pt-sans-regular",sans-serif;
     margin-top: 20px;
 }
 
+.sidebar-content > ul{
+    list-style-type: none;
+    padding: 0;
+}
 
 /*  *****************************  */
 
@@ -122,4 +102,23 @@ border-bottom: 1px solid #fff;
     position: relative;
     left: 0px;
     
+}
+
+/********Article list page sidebar*********/
+
+#column-main {
+  border-right: 1px solid #e5e5e5;
+}
+
+.forum-title {
+  line-height: 180%;
+}
+
+.forum-detail {
+  font-size: 0.8em;
+  padding-top: 0px;
+}
+
+.popular-link {
+  line-height: 30px;
 }
