Commenting out the sidebar

--- a/_less/landingpage.less
+++ b/_less/landingpage.less
@@ -107,7 +107,7 @@
 /********Article list page sidebar*********/
 
 #column-main {
-  border-right: 1px solid #e5e5e5;
+ /* border-right: 1px solid #e5e5e5;*/
 }
 
 .forum-title {
