--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -16,6 +16,5 @@
 <script src="{{ site.baseurl }}/js/jquery.js"></script>
 <script src="{{ site.baseurl }}/js/bootstrap.js"></script>
 <script src="{{ site.baseurl }}/js/video.js"></script>
-<script src="{{ site.baseurl }}/js/accordion.js"></script>
-<script src="{{ site.baseurl }}/js/articlepage.js"></script>
+<script src="{{ site.baseurl }}/js/navigation.js"></script>
 <script src="{{ site.baseurl }}/js/gettingstarted.js"></script>
