--- a/_less/article.less
+++ b/_less/article.less
@@ -8,32 +8,30 @@
 
 
 .article-title {
-    
   margin-top: 30px;
   margin-bottom: 30px;
-  font: 200 28px/1.2em @font-header, sans-serif;
+  font: 200 28px/1.2em @font-header,sans-serif;
   color: @article-color;
   letter-spacing: 1px;
-    
 }
 
+#article-content {
+  font-family: @font-text;
+  font-size: 1.2em;
+  color: @font-color;
+  line-height: 180%;
+  width: 800px;
+}
 
-
-.article_image
-{
- 
-    width: 530px;
-    height: 260px;
-    margin: 20px 20px 20px 20px;
-
+#article-content > p > img{
+  
 }
 
 .border{
-    
   border-right: solid 1px;
   border-color: @footer-color;   
   padding-right: 70px;  
-    
 }
+
 
 
