--- a/_less/callout.less
+++ b/_less/callout.less
@@ -12,7 +12,7 @@
 .callout(@color){
 padding: 20px 20px 20px 5px;
 margin: 20px 0;
-border: 1px solid #eee;
+border: 1px solid #d7d7d7;
 border-left-width: 5px;
 border-radius: 3px;
 border-left-color: @color;
