--- a/css/style.less
+++ b/css/style.less
@@ -16,3 +16,4 @@
 @import url("purplebanner.less");
 @import url("lowerbannerhome.less");
 @import url("carousel.less");
+@import url("articlestep.less");
