--- a/_less/variables.less
+++ b/_less/variables.less
@@ -19,8 +19,8 @@
 /* FONTS */
 
 @font-header: "HelveticaNeueW01-ThinEx 710288"; //HelveticaNeue Font
-@font-text: "pt-sans-regular"; //PT Sans Font
-@font-color: #666667;  //Grey color for the font
+@font-text: "Arial"; //Arial Font
+@font-color: #999999;  //Grey color for the font
 @link-color: #3fa9f5;
 
 /* Related Section Content */
