fixed top nav and breadcrumb
and few more clean ups

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,6 @@
 <!-- Footer
 ================================================== -->
-<div class="custom-footer">
+<div class="custom-footer navbar-fixed-bottom">
   <div class="container">
     <ul class="footer-holder">
      <li class="footer-list">Help</li>
