--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,7 +2,7 @@
 layout: default
 hide_welcome_banner: true
 ---
-<!-- Banner with Breadcrumbs and Search Box
+<!-- Breadcrumb bar 
     ==================================================  -->
     {% include article-breadcrumbs.html %}
 
@@ -49,32 +49,41 @@ hide_welcome_banner: true
       ====================================================  -->
        <!-- dummy content for nav -->
           <div id="article-content">
-      		      <div class="col-xs-9">
+      		      <div class="col-xs-8">
                     <section id="GroupA" class="group">
                         <h3>Group A</h3>
+                        <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         <div id="GroupASub1" class="subgroup">
                             <h4>Group A Sub 1</h4>
+                            <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         </div>
                         <div id="GroupASub2" class="subgroup">
                             <h4>Group A Sub 2</h4>
+                            <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         </div>
                     </section>
                     <section id="GroupB" class="group">
                         <h3>Group B</h3>
+                        <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         <div id="GroupBSub1" class="subgroup">
                             <h4>Group B Sub 1</h4>
+                            <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         </div>
                         <div id="GroupBSub2" class="subgroup">
                             <h4>Group B Sub 2</h4>
+                            <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         </div>
                     </section>
                     <section id="GroupC" class="group">
                         <h3>Group C</h3>
+                        <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         <div id="GroupCSub1" class="subgroup">
                             <h4>Group C Sub 1</h4>
+                            <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         </div>
                         <div id="GroupCSub2" class="subgroup">
                             <h4>Group C Sub 2</h4>
+                            <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                         </div>
                     </section>    
               </div> 
