--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,12 +13,12 @@
 		</div>
 	</div> -->
 
-	  <div class="header">
-    <div class="container">
+	  <div class="header navbar-fixed-top">
+  		<div class="container">
             <a class="header-brand-baseSpace" href="{{ site.baseurl }}/">BaseSpace HelpCenter</span></a> <!-- custom css -->
             <a class="header-brand-illumina" href="http://www.illumina.com/">illumina</span></a> <!-- custom css -->
-    </div>
-  </div>
+    	</div>
+ 	  </div>
 
 {% if page.hide_welcome_banner == null || page.hide_welcome_banner == false %}
 	<div class="container-fluid banner-container">
