--- a/_less/breadcrumb.less
+++ b/_less/breadcrumb.less
@@ -3,7 +3,8 @@
 
 .bs-nav-titlebar {
 background: none repeat scroll 0 0 #ededed;
-position: relative;
+position: fixed;
+top: 65px;
 clear: both;
 height: 36px;
 left: 0;
@@ -11,6 +12,7 @@ line-height: 36px;
 padding-right: 20px;
 width: 100%;
 z-index: 1;
+border-bottom: 1px solid #bbbbbb;
 }
 
 .bs-nav-titlebar-group {
@@ -95,6 +97,6 @@ user-select: none;
 
 .bs-nav-back-text {
     
- padding-left: 7px;
+ padding-left: 3px;
     
 }
