--- a/_less/lowerbannerhome.less
+++ b/_less/lowerbannerhome.less
@@ -10,12 +10,11 @@
     
   border: 1px solid transparent;
   background-color: #f6f6f6;
- /* border-top: solid;
+  border-top: solid;
   border-bottom: solid;
   border-top-color: #E5EAEE;
   border-bottom-color: #E5EAEE;
-  border-top-width: 3px;
-  border-bottom-width: 3px; */
+  border-top-width: 1px;
   margin-top: 40px;
     
     
