--- a/_less/article.less
+++ b/_less/article.less
@@ -17,7 +17,6 @@
     
 }
 
-
 .article_image
 {
  
@@ -38,10 +37,16 @@
 
 #sidebar {
     border-right: 1px solid #e5e5e5;
+    top: 120px;
+    left: 220px;
 }
 
 .fixed {
     position: fixed;
+}
+
+.article-sidebar {
+    margin-top: 30px;
 }
 
 /* sidebar */
@@ -103,15 +108,26 @@
     display: block;           
 }
 
+.group, .subgroup {
+    padding-top: 100px;
+    margin-top: -100px;
+}
+
+@media screen and (max-width: 500px){
+    .bs-docs-sidebar {
+        display:none
+    }
+}
+
 /* JUST DUMMY */
 
 .group {
-    background: yellow;
-    width: 200px;
-    height: 500px;
+    
+    width: 800px;
+    height: auto;
 }
 .group .subgroup {
-    background: orange;
-    width: 150px;
-    height: 200px;
+    
+    width: 750px;
+    height: auto;
 }
