--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -4,9 +4,12 @@
 
             %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
+body { 
+  padding-top: 70px; 
+  padding-bottom: 50px;
+}
 
 .header {
-
   min-height: 65px;
   border: 1px solid transparent;
   background-color: #fff;
