--- a/_less/articlestep.less
+++ b/_less/articlestep.less
@@ -73,3 +73,17 @@
 	max-width:100%;
 	max-height:100%;
 }
+
+.scr-image {
+	border: 2px solid #e5e5e5;
+	margin-top: 25px;
+	padding:10px;
+    background-image:linear-gradient(to bottom, rgba(242, 242, 242, 1) 0%, rgba(242, 242, 242, 1) 100%), linear-gradient(to bottom, rgba(242, 242, 242, 1) 0%, rgba(242, 242, 242, 1) 100%);
+    background-clip: content-box, padding-box;
+    text-align: center;
+}
+
+.scr-image > img {
+	max-width:100%;
+	max-height:100%;
+}
